--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -102,7 +102,7 @@
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:src="@android:color/darker_gray"
-            app:layout_constraintBottom_toTopOf="@+id/tvDescription"
+            app:layout_constraintBottom_toTopOf="@+id/svDescWrapper"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -121,26 +121,30 @@
             app:layout_constraintEnd_toStartOf="@+id/tvDate"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <TextView
-            android:id="@+id/tvDescription"
+        <ScrollView
+            android:id="@+id/svDescWrapper"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:text="@{article.description}"
-            android:textColor="@android:color/black"
-            android:textSize="18sp"
-            android:textStyle="normal"
             app:layout_constraintBottom_toTopOf="@+id/tvDate"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/tvTitle"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            tools:text="This is where the article description will be " />
+            app:layout_constraintTop_toBottomOf="@+id/imageView">
+
+            <TextView
+                android:id="@+id/tvDescriptions"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@{article.description}"
+                android:textColor="@android:color/black"
+                android:textSize="18sp"
+                android:textStyle="normal"
+                tools:text="This is where the article description will be " />
+        </ScrollView>
 
         <TextView
             android:id="@+id/tvDate"
@@ -152,7 +156,7 @@
             app:article_date="@{article.published}"
             app:layout_constraintBottom_toTopOf="@+id/button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tvDescription"
+            app:layout_constraintTop_toBottomOf="@+id/svDescWrapper"
             tools:text="TextView" />
 
         <Button
