--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
-            xmlns:app="http://schemas.android.com/apk/res-auto"
-            android:id="@+id/nav_main"
-            app:startDestination="@id/feedAlbumFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/nav_main"
+    app:startDestination="@id/feedAlbumFragment">
     <fragment
         android:id="@+id/feedAlbumFragment"
         android:name="ca.sheridancollege.simplenewsapp.ui.feedFragment.FeedFragment"
-        android:label="Simple News">
+        android:label="Simple News"
+        tools:layout="@layout/fragment_feed">
         <action
             android:id="@+id/action_feedAlbumFragment_to_detailAlbumFragment"
             app:destination="@id/detailAlbumFragment"
@@ -19,7 +21,8 @@
     <fragment
         android:id="@+id/detailAlbumFragment"
         android:name="ca.sheridancollege.simplenewsapp.ui.detailAlbum.DetailFragment"
-        android:label="Article">
+        android:label="Article"
+        tools:layout="@layout/fragment_detail">
         <argument
             android:name="ArticleUrl"
             app:argType="string" />
